prevent overlapping

--- a/styles/pages/amazon.css
+++ b/styles/pages/amazon.css
@@ -105,7 +105,7 @@
 .product-desc {
   height: 120px;
   margin-bottom: 5px;
-  padding-bottom: 60px;
+  padding-bottom: 100px;
 }
 
 .product-rating-container {
